# ModelKinship

./: .gitignore  README.md  calculate.py  pyproject.toml  requirements.txt  run_command.py  utility.py
metrics/: calculate.py  calculate_split.py  run_command.py  utility.py
scripts/: Iterative_merge.ipynb
